overlays/uksouth-sandbox/olympus/zephyrus/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/service-upstream: 'true'
  name: api.${cluster_name}.${cluster_location}.bink.sh
  namespace: default
spec:
  rules:
    - host: api.${cluster_name}.${cluster_location}.bink.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zephyrus-api
                port:
                  number: 80
  tls:
    - hosts:
        - api.${cluster_name}.${cluster_location}.bink.sh
